--- a/ManageHotelRegistrationProject/Web/Views/Shared/_Layout.cshtml
+++ b/ManageHotelRegistrationProject/Web/Views/Shared/_Layout.cshtml
@@ -30,18 +30,22 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">Reservations</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Rooms" asp-action="Index">Rooms</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+    <main>
+        <div class="container">
+            <main role="main" class="pb=3">
+                @RenderBody()
+            </main>
+        </div>
+     </main>
 
     <footer class="border-top footer text-muted">
         <div class="container">
