--- a/ManageHotelRegistrationProject/Web/Views/Users/Index.cshtml
+++ b/ManageHotelRegistrationProject/Web/Views/Users/Index.cshtml
@@ -34,7 +34,7 @@
                 @Html.DisplayNameFor(model => model.IsAdmin)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.UserName)
+                @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.PhoneNumber)
@@ -63,6 +63,9 @@
             <td>
                 @Html.DisplayFor(modelItem => item.DateOfDismissal)
             </td>
+            <th>
+                @Html.DisplayNameFor(modelItem => item.IsAdmin)
+            </th>
             <td>
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
