--- a/ManageHotelRegistrationProject/Web/Views/Users/Index.cshtml
+++ b/ManageHotelRegistrationProject/Web/Views/Users/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-area="Identity" asp-page="/Account/Register">Create New</a>
 </p>
 <table class="table">
     <thead>
